--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo List</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <div class="container">
-        <h1>Todo List</h1>
-        <div class="box">
-          <input class="text" type="text" />
-          <button class="btn">+</button>
-        </div>
-        <ul id="myList"></ul>
+      <h1>To Do List</h1>
+      <div class="input-container">
+        <input class="text" type="text" />
+        <input class="btn" type="button" value="Qo'shish" />
+      </div>
+
+      <div class="tasks-container">
+        <!-- <div class="task">
+          <div class="parag">To wake up</div>
+          <div class="edit-box">
+            <input type="button" class="edit" value="edit" />
+            <input type="button" class="delete" value="delete" />
+          </div>
+        </div> -->
       </div>
     </header>
+
     <script src="./script.js"></script>
   </body>
 </html>
